# Test-Synchronization

./: README.md
App_test_synchronization_section7/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
App_test_synchronization_sections_2_to_6/: CMakeLists.txt  Main.qml  main.cpp
LICENSES/: BSD-3-Clause.txt  LicenseRef-Qt-Commercial.txt
suite_test_synchronization_section2/: suite.conf
suite_test_synchronization_section2/shared/scripts/: names.py
suite_test_synchronization_section2/tst_time_based_synchronization/: test.py
suite_test_synchronization_section3/: suite.conf
suite_test_synchronization_section3/shared/scripts/: names.py
suite_test_synchronization_section3/tst_callback_function/: test.py
suite_test_synchronization_section3/tst_object_based_synchronization/: test.py
suite_test_synchronization_section4/: suite.conf
suite_test_synchronization_section4/tst_image_based_synchronization/: test.py
suite_test_synchronization_section5/: suite.conf
suite_test_synchronization_section5/shared/scripts/: names.py
suite_test_synchronization_section5/tst_text_based_synchronization/: test.py
suite_test_synchronization_section6/: suite.conf
suite_test_synchronization_section6/shared/scripts/: names.py
suite_test_synchronization_section6/tst_conditional_synchronization/: test.py
suite_test_synchronization_section7/: config.xml  envvars  suite.conf
suite_test_synchronization_section7/tst_event_handlers/: test.py
suite_test_synchronization_section7/tst_signal_handlers/: test.py
(+1 files in other folders)
